--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.zip filter=lfs diff=lfs merge=lfs -text
+C:/Users/patri/OneDrive/Desktop/yolov/Original[[:space:]]DataSet-20240618T095329Z-001.zip filter=lfs diff=lfs merge=lfs -text
